# ha-sugar-valley-neopool

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt
.claude/: mind.mv2
.devcontainer/: devcontainer.json
.github/workflows/: lint.yml  release.yml  test.yml  validate.yml
config/: configuration.yaml
custom_components/sugar_valley_neopool/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  device_trigger.py  diagnostics.py  entity.py  helpers.py  icons.json  manifest.json  number.py  quality_scale.yaml  repairs.py  select.py  sensor.py  switch.py
custom_components/sugar_valley_neopool/translations/: de.json  en.json  es.json  et.json  fi.json  fr.json  it.json  nb.json  pt.json  sv.json
docs/: HA_INTEGRATION_IMPLEMENTATION.md  HA_MQTT_INTEGRATION_GUIDE.md  MQTT_TOPIC_QUICK_REFERENCE.md  README.md  TASMOTA_NEOPOOL_MQTT_REFERENCE.md  TEMPLATE_ANALYSIS_HA_SINAPSI_ALFA.md  ha_neopool_mqtt_package.yaml
firmware/: README.md
scripts/: setup
tests/: __init__.py  conftest.py  test_binary_sensor.py  test_binary_sensor_extended.py  test_button.py  test_button_extended.py  test_config_flow.py  test_config_flow_extended.py  test_const.py  test_coverage_98.py  test_coverage_boost.py  test_device_trigger.py  test_diagnostics.py  test_entity.py  test_entity_extended.py  test_entity_platforms_extended.py  test_helpers.py  test_helpers_extended.py  test_init.py  test_init_coverage.py  test_init_extended.py  test_number.py  test_number_extended.py  test_repairs.py  test_select.py  test_select_extended.py  test_sensor.py  test_sensor_extended.py  test_switch.py  test_switch_extended.py
